Fix collapse focused style

--- a/components/collapse/style/index.less
+++ b/components/collapse/style/index.less
@@ -50,6 +50,10 @@
           content: "\E61F";
         }
       }
+
+      &:focus {
+        outline: none;
+      }
     }
 
     &.@{collapse-prefix-cls}-no-arrow {
